bug 233115 : Fix potential hangs in webservices security check r=darin sr=jst